# upload-file-api-ge

./: .env  Cargo.toml  Dockerfile  compose.minio.yml  compose.yml
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/00cd8679-7446-4513-821d-7f51599df225/: xl.meta.bkp
data/.minio.sys/tmp/.trash/070a818f-e58b-4145-9fb6-91eeb77445b5/: xl.meta.bkp
data/.minio.sys/tmp/.trash/29c62e2b-5a8a-4651-a7c9-1dab71250f8c/: xl.meta.bkp
data/.minio.sys/tmp/.trash/75bb8415-3d1f-4d34-9267-bb660848ea76/: xl.meta.bkp
data/.minio.sys/tmp/.trash/d55ed013-4358-4ba9-8402-fe9531680485/: xl.meta.bkp
data/.minio.sys/tmp/.trash/fae50304-9b1c-4a8c-b169-e47b29348ca2/: xl.meta.bkp
src/: client.rs  config.rs  handlers.rs  main.rs  util.rs
