[package]
name = "GE-upload-file-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
dotenv = "0.15.0"
minio = "0.3.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

